feat: Problem5 Solution